# isExecutable.cpp

./: CMakeLists.txt  ReadMe.md
include/IsExecutable/: IsExecutable.h  api.h
lib/: CMakeLists.txt  enum_utils.hpp  isExecutable.cpp  mac.cpp  nix.cpp  platform_specific.hpp  svstream.hpp  win.cpp
tests/: CMakeLists.txt  tests.cpp
